--- a/solution/challenge.ipynb
+++ b/solution/challenge.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,8 @@
     "from collections import Counter\n",
     "from typing import List, Iterable\n",
     "\n",
-    "# Local libraries - ensure project root is in sys.path before local imports\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "if project_root not in sys.path:\n",
-    "    sys.path.append(project_root)\n",
-    "\n",
-    "from src.common.utils import twitter_schema  # noqa: E402\n",
-    "from src.common.performance import profile_performance, profile_detailed  # noqa: E402\n",
+    "# Local libraries\n",
+    "from benchmark import  twitter_schema, profile_performance, profile_detailed\n",
     "\n",
     "file_path = \"../farmers-protest-tweets-2021-2-4.json\""
    ]
@@ -498,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
